# out

./: .travis.yml  Cargo.toml  README.md
benches/: max.rs  rng.rs  sort.rs
src/: iter.rs  lib.rs  slice.rs
tests/: fuzz.rs  man.rs  max.rs  sort.rs
