[package]
name = "out"
version = "5.0.0"
authors = ["evenorog <evenorog@gmail.com>"]
description = "Provides partial sorting for slices and iterators."
documentation = "https://docs.rs/out"
repository = "https://github.com/evenorog/out"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["partial", "sort", "iterator", "slice"]
categories = ["algorithms", "no-std"]
exclude = ["/.travis.yml", "/out.svg"]
edition = "2018"

[features]
default = ["alloc"]
alloc = []

[badges]
travis-ci = { repository = "evenorog/out" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
rand = { version = "0.7.2", features = ["small_rng"]}
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
