[package]
name = "out"
version = "6.0.0"
authors = ["evenorog <evenorog@gmail.com>"]
description = "Provides fast min and max functionality for collections."
documentation = "https://docs.rs/out"
repository = "https://github.com/evenorog/out"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["min", "max", "iterator", "slice"]
categories = ["algorithms", "no-std"]
exclude = ["/.travis.yml"]
edition = "2018"

[features]
default = ["alloc"]
alloc = []

[badges]
travis-ci = { repository = "evenorog/out" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
rand = { version = "0.7.3", features = ["small_rng"]}
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
