[package]
name = "out"
version = "8.0.0"
authors = ["evenorog <evenorog@gmail.com>"]
description = "Provides fast min and max functionality for collections."
documentation = "https://docs.rs/out"
repository = "https://github.com/evenorog/out"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["min", "max", "iterator", "slice"]
categories = ["algorithms", "no-std"]
edition = "2021"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[badges]
maintenance = { status = "passively-maintained" }

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"]}
quickcheck = "1"
quickcheck_macros = "1"
